--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Yuhang Wu
 
 # Your name to show in the footer
-author: Some Person
+author: Wu
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -22,9 +22,8 @@ author: Some Person
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - Really Useful: "https://chatgpt.com/"
+  Author's home: "https://github.com/wuyhdev"
 
 ################
 # --- Logo --- #
