--- a/_config.yml
+++ b/_config.yml
@@ -293,6 +293,8 @@ exclude:
   - README.md
   - screenshot.png
   - docs/
+  - _posts/2020-02-26-flake-it-till-you-make-it.md
+  - _posts/2020-02-28-sample-markdown.md
 
 plugins:
   - jekyll-paginate
